[+] installation hadoop_env_config as package during testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
 install:
   - pip install ${PIP_OPTS} pytest
   - pip install ${PIP_OPTS} pytest-cov
-  
+
 script:
+  - pip install --editable .
   - make test-all-with-coverage
